remove error causing parenthesis

--- a/_news/251_2.md
+++ b/_news/251_2.md
@@ -5,4 +5,4 @@ inline: true
 related_posts: false
 ---
 
-TA'd for [Great Theoretical Ideas in Computer Science](https://www.cs251.com/) at CMU, Spring 2022
+TA for [Great Theoretical Ideas in Computer Science](https://www.cs251.com/) at CMU, Spring 2022
