--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
 @article{jones2024customizing,
   title={Customizing Text-to-Image Models with a Single Image Pair},
   author={Jones, Maxwell and Wang, Sheng-Yu and Kumari, Nupur and Bau, David and Zhu, Jun-Yan},
-  journal={arXiv preprint arXiv:2405.01536},
+  booktitle={SIGGRAPH Asia},
   year={2024},
   abbr={SIGGRAPH Asia},
   url={https://arxiv.org/abs/2405.01536},
@@ -20,7 +20,7 @@
 @inproceedings{sharma2023efficiently,
   title={Efficiently learning the graph for semi-supervised learning},
   author={Sharma, Dravyansh and Jones, Maxwell},
-  booktitle={Uncertainty in Artificial Intelligence},
+  booktitle={Uncertainty in Artificial Intelligence (UAI)},
   pages={1900--1910},
   year={2023},
   organization={PMLR},
@@ -36,7 +36,7 @@
 @article{hall2022systematic,
   title={A systematic study of bias amplification},
   author={Hall, Melissa and Van_der_Maaten, Laurens and Gustafson, Laura and Jones, Maxwell and Adcock, Aaron},
-  journal={arXiv preprint arXiv:2201.11706},
+  journal={NeurIPS Trustworthy and Socially Responsible Machine Learning Workshop},
   year={2022},
   abbr={CVPR (Workshop)},
   url={https://arxiv.org/abs/2201.11706},
