--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
 @article{jones2024customizing,
   title={Customizing Text-to-Image Models with a Single Image Pair},
   author={Jones, Maxwell and Wang, Sheng-Yu and Kumari, Nupur and Bau, David and Zhu, Jun-Yan},
-  booktitle={SIGGRAPH Asia},
+  journal={SIGGRAPH Asia},
   year={2024},
   abbr={SIGGRAPH Asia},
   url={https://arxiv.org/abs/2405.01536},
@@ -20,7 +20,7 @@
 @inproceedings{sharma2023efficiently,
   title={Efficiently learning the graph for semi-supervised learning},
   author={Sharma, Dravyansh and Jones, Maxwell},
-  booktitle={Uncertainty in Artificial Intelligence (UAI)},
+  journal={Uncertainty in Artificial Intelligence (UAI)},
   pages={1900--1910},
   year={2023},
   organization={PMLR},
