--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@
 @inproceedings{sharma2023efficiently,
   title={Efficiently learning the graph for semi-supervised learning},
   author={Sharma, Dravyansh and Jones, Maxwell},
-  journal={Uncertainty in Artificial Intelligence (UAI)},
+  booktitle={Uncertainty in Artificial Intelligence (UAI)},
   pages={1900--1910},
   year={2023},
   organization={PMLR},
